Fixed Line N0. 273 path Image was Not Visible and Fixed See All recipie lInk

--- a/Project/Omni/css/general.css
+++ b/Project/Omni/css/general.css
@@ -35,6 +35,7 @@ Default: 1
 
 --- 06 BORDER-RADIUS
 Default: 9px
+11px
 
 --- 07 WHITESPACE
 
@@ -84,7 +85,7 @@ body{
     border-radius: 9px;
 
     /*Transition is always applied to Original state*/
-    transition: background-color 0.3s ;
+    transition: all  0.3s ;
 }
 
 .btn--full:link,
@@ -110,6 +111,24 @@ body{
     background-color: #fdf2e9;
     /*trick to put shadow, while inset will put shadow inward*/
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+.link:link,
+.link:visited{
+    display: inline;
+    text-decoration: none;
+    color: #e67e22;
+    border-bottom: 1px solid currentColor;
+/*    CURRENT COLOR: Takes the color from the 'Color'*/
+padding-bottom: 2px;
+transition: 0.3s;
+}
+
+.link:hover,
+.link:active {
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
+/*    By setting it trasparent it will not move that 1px */
 }
 
 .margin-right-sm{
@@ -192,7 +211,17 @@ strong{
     padding: .4rem 0.8rem;
     font-size: 1.2rem;
     text-transform: uppercase;
-    background-color: #51cf66;
+    /*background-color: #51cf66;*/
     color: #333333;
     border-radius: 100px;
 }
+
+.margin-bottom-md{
+    margin-bottom: 4.8rem !important;
+}
+
+.centre-text{
+text-align: center
+}
+
+
